# anki-marker

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  build-for-windows.js  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  router.ts  tauri-api.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config-template.toml  dict.db
src-tauri/src/: main.rs
src-tauri/src/application/: config.rs  dict.rs  mod.rs
src-tauri/src/application/logics/: config.rs  dict.rs  mod.rs  utils.rs
src/assets/: model-back.html  model-css.css  model-css.html  model-front.html  model-template-release-note.md
src/components/: AddButton.vue  CardStatus.ts  CollinsCard.vue  OxfordCard.vue  PlayAudioButton.vue  ResetButton.vue  ReturnButton.vue  ScrollMemory copy.vue  ScrollMemory.vue  SentencePanel.vue  SettingButton.vue  Token.vue  TokenItem.vue  WordCard.vue  YoudaoCard.vue  index.ts
src/fluent-controls/: FluentButton.vue  FluentHyperlink.vue  FluentInput.vue  FluentRadio.vue  FluentSelect.vue  HoverWrapper.ts  fluent-scrollbar.css  fluent-styles.css  generateUniqueId.ts  index.ts  useHover.ts
src/logics/: anki-connect.ts  anki.ts  config.ts  dict.ts  globals.ts  iciba.ts  lock.ts  md5.ts  preference.ts  stringutils.ts  typing.ts  utils.ts  youdao.ts
src/views/: Main.vue  MainView.vue  Settings.vue  SettingsView.vue
