[package]
name = "anki-marker"
version = "0.1.0"
description = "Anki Marker is a tool for creating Anki cards."
authors = ["ZHB"]
license = "GPL-3.0"
repository = "https://github.com/zhb2000/anki-marker"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "dialog-confirm", "app-all", "os-all", "dialog-message", "http-request", "clipboard-read-text", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
toml_edit = "0.19.14"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = 'abort'
lto = true
strip = true
